chore: fix GH button background color in dark mode

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -115,6 +115,7 @@
 .indexCtasGitHubButton {
   border: none;
   overflow: hidden;
+  color-scheme: auto;
 }
 
 .indexCtaTryNowButton:hover {
